[gd_scene load_steps=10 format=3 uid="uid://wibtjjyhafg4"]

[ext_resource type="Script" path="res://Escenas/Menus/menu_principal.gd" id="1_vn785"]
[ext_resource type="Texture2D" uid="uid://d2skq3dyio1rp" path="res://Escenas/Menus/Imgs/FatCatFestLogo.png" id="2_ijal2"]
[ext_resource type="FontFile" uid="uid://cs81puvnc10pp" path="res://Escenas/Menus/Fonts/LobsterTwo-Regular.ttf" id="3_lanbx"]
[ext_resource type="Texture2D" uid="uid://x886cltnkwtt" path="res://Escenas/Menus/Buttons/PlayButton.png" id="3_lrni4"]
[ext_resource type="Texture2D" uid="uid://dxkx5w2qurkf3" path="res://Escenas/Menus/Buttons/OptionsButton.png" id="4_jvwwr"]
[ext_resource type="Texture2D" uid="uid://c7ru10qr3mnrv" path="res://Escenas/Menus/Buttons/InfoButton.png" id="5_kukgg"]
[ext_resource type="Texture2D" uid="uid://2w4i8bs40b7c" path="res://Escenas/Menus/Placeholders/characters.png" id="5_msp6e"]
[ext_resource type="Script" path="res://Escenas/Menus/Buttons/Button.gd" id="7_wf0f2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_71wjp"]
content_margin_left = 100.0

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vn785")
metadata/_edit_lock_ = true

[node name="MenuPrincipal" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 30
metadata/_edit_lock_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="MenuPrincipal"]
clip_contents = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPrincipal/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="Logo" type="TextureRect" parent="MenuPrincipal/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_ijal2")
expand_mode = 1
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPrincipal/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.59
theme_override_constants/separation = 10
alignment = 2

[node name="PlayButton" type="Button" parent="MenuPrincipal/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_lanbx")
theme_override_font_sizes/font_size = 66
theme_override_styles/hover = SubResource("StyleBoxFlat_71wjp")
text = "Play"
icon = ExtResource("3_lrni4")
expand_icon = true
script = ExtResource("7_wf0f2")

[node name="PlayButton2" type="Button" parent="MenuPrincipal/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_lanbx")
theme_override_font_sizes/font_size = 66
theme_override_styles/hover = SubResource("StyleBoxFlat_71wjp")
text = "Options"
icon = ExtResource("4_jvwwr")
expand_icon = true
script = ExtResource("7_wf0f2")

[node name="PlayButton3" type="Button" parent="MenuPrincipal/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_lanbx")
theme_override_font_sizes/font_size = 66
theme_override_styles/hover = SubResource("StyleBoxFlat_71wjp")
text = "Credits"
icon = ExtResource("5_kukgg")
expand_icon = true
script = ExtResource("7_wf0f2")

[node name="CenterContainer" type="CenterContainer" parent="MenuPrincipal/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Imagen" type="TextureRect" parent="MenuPrincipal/HBoxContainer/CenterContainer"]
layout_mode = 2
texture = ExtResource("5_msp6e")

[connection signal="mouse_entered" from="MenuPrincipal/HBoxContainer/VBoxContainer/VBoxContainer/PlayButton" to="MenuPrincipal/HBoxContainer/VBoxContainer/VBoxContainer/PlayButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MenuPrincipal/HBoxContainer/VBoxContainer/VBoxContainer/PlayButton" to="MenuPrincipal/HBoxContainer/VBoxContainer/VBoxContainer/PlayButton" method="_on_mouse_exited"]
[connection signal="pressed" from="MenuPrincipal/HBoxContainer/VBoxContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="mouse_entered" from="MenuPrincipal/HBoxContainer/VBoxContainer/VBoxContainer/PlayButton2" to="MenuPrincipal/HBoxContainer/VBoxContainer/VBoxContainer/PlayButton2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MenuPrincipal/HBoxContainer/VBoxContainer/VBoxContainer/PlayButton2" to="MenuPrincipal/HBoxContainer/VBoxContainer/VBoxContainer/PlayButton2" method="_on_mouse_exited"]
[connection signal="pressed" from="MenuPrincipal/HBoxContainer/VBoxContainer/VBoxContainer/PlayButton2" to="." method="_on_play_button_pressed"]
[connection signal="mouse_entered" from="MenuPrincipal/HBoxContainer/VBoxContainer/VBoxContainer/PlayButton3" to="MenuPrincipal/HBoxContainer/VBoxContainer/VBoxContainer/PlayButton3" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MenuPrincipal/HBoxContainer/VBoxContainer/VBoxContainer/PlayButton3" to="MenuPrincipal/HBoxContainer/VBoxContainer/VBoxContainer/PlayButton3" method="_on_mouse_exited"]
[connection signal="pressed" from="MenuPrincipal/HBoxContainer/VBoxContainer/VBoxContainer/PlayButton3" to="." method="_on_play_button_pressed"]
